<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">RasaNusa</string>
    <string name="title_profile">Profil</string>
    <string name="title_back">Kembali</string>
    <string name="title_next">Lanjut</string>
    <string name="title_scan">Pindai</string>

    <!-- general -->
    <string name="food_name">Nama Makanan</string>
    <string name="asal_daerah">Asal Daerah</string>
    <string name="food_prompt">Deskripsi singkat makanan</string>
    <string name="unknown">-</string>

    <!-- Register & Login -->
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="email" translatable="false">Email</string>
    <string name="hint_email">Email anda</string>
    <string name="username">Username</string>
    <string name="uid">User ID: -</string>
    <string name="hint_username">Masukkan username anda</string>
    <string name="password">Password</string>
    <string name="hint_password">Password anda</string>
    <string name="welcome">Selamat datang di RasaNusa!</string>
    <string name="title_register">Daftarkan akunmu dulu ya!</string>
    <string name="to_register">Daftar disini.</string>
    <string name="to_login">Masuk disini.</string>
    <string name="dont_have_account">Belum punya akun?</string>
    <string name="haveAccount">Sudah punya akun?</string>
    <string name="invalid_username">Username tidak valid</string>
    <string name="email_invalid">Email tidak valid</string>
    <string name="error_password">Password tidak boleh kurang dari 8 karakter!</string>

    <!-- main -->


    <!-- home -->
    <string name="explore">Makanan Indonesia apa yang ingin kamu ketahui hari ini?</string>
    <string name="jelajahi">Jelajahi Makanan Indonesia</string>
    <string name="username_home">%1$s!</string>
    <string name="selamat_datang">Selamat datang di RasaNusa,</string>

    <!-- detail -->
    <string name="food_description">Deskripsi Makanan</string>
    <string name="bahan_utama">Bahan Utama</string>
    <string name="food_history">Sejarah Singkat</string>
    <string name="food_nutrition">Keterangan Gizi</string>
    <string name="nutrisi">Nutrisi</string>
    <string name="calories">Kalori</string>
    <string name="carbo">Karbohidrat</string>
    <string name="jml_carbo">0g</string>
    <string name="jml_cal">0g</string>
    <string name="jml_fat">0g</string>
    <string name="jml_protein">0g</string>
    <string name="protein">Protein</string>
    <string name="fat">Lemak</string>
    <string name="serving_size">Ukuran per porsi</string>
    <string name="default_size">0g</string>
    <string name="funfact">Fakta Menarik</string>
    <string name="category">Kategori</string>
    <string name="bahan_dasar">Bahan dasar :</string>
    <string name="default_food_name">Nama makanan tidak tersedia</string>
    <string name="default_bahan_dasar">Bahan dasar masih menjadi misteri!</string>
    <string name="default_asal_daerah">Tidak diketahui? Kita cari bersama, yuk!</string>
    <string name="default_deskripsi">Detail makanan belum ada</string>
    <string name="default_sejarah">Masih mencari sejarah yang hilang…</string>
    <string name="default_funfact">Hmm… kami nggak bisa nemuin yang ini.</string>

    <!-- camera -->
    <string name="capture_image" translatable="false">Capture Image</string>
    <string name="close">close</string>
    <string name="photo_picker" translatable="false">Photo Picker</string>

    <!-- profile -->
    <string name="profile">Profil</string>
    <string name="setting_button">setting button</string>
    <string name="rincian">Rincian</string>
    <string name="go_to_camera" translatable="false">Go to camera</string>

    <!-- camera -->
    <string name="title_activity_camera" translatable="false">CameraActivity</string>
    <string name="input_username_title">Isi username dulu, ya!</string>
    <string name="analisis_makanan">analisis makanan</string>

    <!-- result -->
    <string name="result">Hasil Klasifikasi</string>
    <string name="predicted_class">Kelas yang diprediksi:</string>
    <string name="txt_predicted_class">Prediksi kelas</string>
    <string name="lihat_informasi_makanan">Lihat informasi makanan</string>
    <string name="success_predict">Makanan yang kamu cari adalah </string>
    <string name="success_confidence">Makanan ini memiliki confidence score: </string>
    <string name="value_confidence" translatable="false">confidence score </string>
    <string name="detail_makanan">Detail Makanan</string>
    <string name="title_home">Beranda</string>

    <!-- profile -->
    <string name="email_dan_password">Ubah email dan password</string>
    <string name="ubah_email">Ubah email</string>
    <string name="ubah_kata_sandi">Ubah kata sandi</string>
    <string name="berlangganan">Berlangganan</string>
    <string name="beli_keanggotaan">Subscribe</string>
    <string name="keanggotaan">Keanggotaan</string>
    <string name="history_scan">Riwayat pencarian</string>
    <string name="keluar">Keluar</string>
    <string name="lihat_semua">Lihat semua</string>
    <string name="points">Poin</string>
    <string name="unknown_food">makanan tidak ditemukan</string>
    <string name="unknown_confidence" translatable="false">-</string>
    <string name="username_profile" translatable="false">%1$s</string>

    <!-- history -->
    <string name="title_history_food">Riwayat Makanan</string>
    <string name="timestamp">timestamp</string>
    <string name="delete_history">Hapus riwayat</string>
    <string name="button_back">button back</string>
    <string name="rasanusa_poin">RasaNusa Poin</string>
    <string name="delete_all_history">Hapus semua riwayat makanan?</string>
    <string name="setuju">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="history_deleted">Semua riwayat makanan telah terhapus</string>

    <!-- Subscription -->
    <string name="subscription">Ayo berlangganan!</string>
    <string name="txt_choose_bundle">Pilih paket yang cocok untuk kamu</string>
    <string name="only">Hanya</string>
    <string name="per_tahun">/tahun</string>
    <string name="per_bulan">/bulan</string>
    <string name="per_minggu">/minggu</string>
    <string name="new_user">Untuk pengguna baru hemat 90%</string>
    <string name="new_user_weekly">Untuk pengguna baru bisa uji coba paket Weekly</string>
    <string name="free">GRATIS</string>
    <string name="annual">Tahunan</string>
    <string name="monthly">Bulanan</string>
    <string name="weekly">Mingguan</string>
    <string name="buy_subscription">Beli langganan</string>
    <string name="price">%s</string>
    <string name="message_limit">Kamu sudah mencapai limit 3 kali scan. Silakan berlangganan untuk melanjutkan.</string>
    <string name="title_limit">Batas Scan Tercapai!</string>
    <string name="subscription_now_button">Subscribe</string>
    <string name="feature_not_available">Fitur ini belum tersedia</string>
    <string name="confirm_logout">Apakah anda yakin ingin logout?</string>
    <string name="success_subscribe">Anda telah berlangganan!</string>
    <string name="message_success_subscribe">Anda dapat pindai makanan tanpa batas</string>

    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="location" translatable="false">Location</string>
    <string name="food_nearby">Makanan khas terdekat</string>
    <string name="text_notification">Anda sedang berada di %1$s. Cobain %2$s yuk!</string>
    <string name="chatbot" translatable="false">Chatbot</string>
    <string name="ask_chatbot">Tanya aja…</string>
    <string name="bot_bubble_chat">Ini bubble chat Bot</string>
    <string name="ask_button">Tanya</string>
    <string name="title_ask">Mau nanya apa ke Ranus?</string>
    <string name="txt_feature_coming_soon">Sabar ya! Fitur ini akan dikembangkan jika kami mendapat inkubasi!</string>
    <string name="txt_feature_on_development">Maaf, fitur ini sedang dikembangkan</string>
    <string name="ranus_ai" translatable="false">Ranus.ai</string>
    <string name="unknown_location_user">Waduh, kamu dimana?</string>
    <string name="message_unknown_location_user">Kami tidak menemukan makanan khas disekitar kamu. Jalan-jalan lagi, yuk!</string>

    <string name="location_granted">Lokasi diizinkan</string>
    <string name="location_needed">Aplikasi membutuhkan izin akses lokasi</string>
    <string name="notification_granted">Notifikasi diizinkan</string>
    <string name="notification_needed">Aplikasi membutuhkan izin untuk mengirim notifikasi</string>
    <string name="message_apk_need_permission">Aplikasi ini membutuhkan izin lokasi untuk memberikan notifikasi makanan khas di daerah Anda.</string>
    <string name="title_need_location_permission">Izin akses lokasi dan notifikasi</string>
    <string name="user_location">Lokasi Anda</string>
    <string name="user_bubble_chat">Ini bubble chat User</string>

    <!-- Change email and password -->
    <string name="new_email">Email baru</string>
    <string name="change_email">Ubah Email</string>
    <string name="change_pass">Ubah Password</string>
    <string name="new_password">Password baru</string>
    <string name="title_ubah_email_dan_password">Ubah Email dan Password</string>
    <string name="titile_kata_sandi_lama">Kata sandi lama</string>
    <string name="title_kata_sandi_baru">Kata sandi baru</string>
    <string name="title_confirm_kata_sandi_baru">Konfimasi kata sandi baru</string>
    <string name="title_confirm_kata_sandi">Konfimasi kata sandi</string>
    <string name="title_current_email">Email anda sekarang</string>
    <string name="title_current_password">Password anda sekarang</string>
    <string name="current_email">User email</string>
    <string name="current_password">current password</string>
    <string name="fill_in_all_fields">Harap isi semua kolom yang tersedia</string>
    <string name="empty">-</string>
    <string name="password_salah">Password salah!</string>
    <string name="email_tidak_terdaftar">Email tidak terdaftar!</string>
    <string name="format_email_tidak_valid">Format email tidak valid!</string>
    <string name="password_terlalu_lemah_gunakan_minimal_6_karakter">Password terlalu lemah! Gunakan minimal 6 karakter.</string>
    <string name="email_sudah_terdaftar_gunakan_email_lain">Email sudah terdaftar! Gunakan email lain.</string>
    <string name="gagal_membuat_akun">Gagal membuat akun: %1$s</string>
    <string name="email_dan_password_tidak_boleh_kosong">Email dan password tidak boleh kosong</string>
    <string name="semua_field_harus_diisi">Semua field harus diisi</string>


    <!-- Lumpia (Jateng)
    Pempek (Palembang)
    Papeda (Papua)
    Bika Ambon (Medan)
    Rendang (Padang)
    Es Pisang Ijo (Makassar)
    Keraktelor (Jakarta)
    Soto Banjar (Kalimantan)
    Sate Lilit (Bali)
    Mie Aceh (Aceh)
    Tahu Sumedang (Sumedang) -->


</resources>