<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.result.ResultActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:elevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/close"
        android:padding="8dp"
        android:elevation="8dp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageResult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_place_holder"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnExit"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/title_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/imageResult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/layout_predictedClass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintTop_toBottomOf="@id/title_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/title_class_predict"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/success_predict"
            android:layout_weight="2"
            android:gravity="center" />

        <TextView
            android:id="@+id/txt_predictedClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_predicted_class"
            android:textStyle="bold"
            android:layout_marginStart="4dp"
            android:layout_weight="2"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_confidence_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintTop_toBottomOf="@id/layout_predictedClass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/title_confidence_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/success_confidence"
            android:layout_weight="2"
            android:gravity="center" />

        <TextView
            android:id="@+id/txt_confidence_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_confidence"
            android:textStyle="bold"
            android:layout_marginStart="4dp"
            android:layout_weight="2"
            android:gravity="center" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_toDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/lihat_informasi_makanan"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/layout_confidence_score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>