<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.chatbot.ChatbotFragment">

    <ImageButton
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/close"
        android:elevation="8dp"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white"
        tools:ignore="TouchTargetSizeCheck" />

    <LinearLayout
        android:id="@+id/layout_send_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/et_ask_chatbot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0.5"
            android:background="@drawable/style_box_corner"
            android:backgroundTint="@android:color/white"
            android:hint="@string/ask_chatbot"
            android:textColorHint="@color/gray_overlay"
            android:importantForAutofill="no"
            android:inputType="textShortMessage"
            android:padding="10dp"
            android:singleLine="true"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck,VisualLintTextFieldSize" />

        <ImageButton
            android:id="@+id/btn_ask"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:background="@drawable/style_rounded_button"
            android:backgroundTint="@color/black_overlay"
            android:src="@drawable/ic_send"
            android:textColor="@android:color/white"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/title_chatbot_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_ask"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_send_message"
        app:layout_constraintTop_toBottomOf="@id/view_top"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center" />

    <TextView
        android:id="@+id/title_feature_unvailable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_feature_coming_soon"
        app:drawableStartCompat="@drawable/ic_warning"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_top"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center" />

    <TextView
        android:id="@+id/title_ranus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ranus_ai"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnExit"
        android:elevation="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center" />

    <TextView
        android:id="@+id/user_bubble_chat"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/style_bot_rigth_corner"
        android:backgroundTint="@color/orange"
        android:padding="14dp"
        android:visibility="gone"
        android:text="@string/user_bubble_chat"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/bot_bubble_chat"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/bot_bubble_chat"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/style_top_left_corner"
        android:backgroundTint="@color/green"
        android:visibility="gone"
        android:padding="14dp"
        android:text="@string/bot_bubble_chat"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/layout_send_message"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:id="@+id/view_top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/orange"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>