<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".ui.profile.changeemail.ChangeEmailFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/bnt_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/button_back"
                android:padding="8dp"
                android:src="@drawable/baseline_arrow_back_ios_24"
                app:tint="?attr/colorOnSurface"
                tools:ignore="RedundantDescriptionCheck" />

            <TextView
                android:id="@+id/title_layout_change_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/change_email"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/orange" />

        <TextView
            android:id="@+id/title_feature_unvailable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_feature_on_development"
            app:drawableStartCompat="@drawable/ic_warning"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_top"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center" />

        <LinearLayout
            android:id="@+id/layout_current_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title_current_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="0.3"
                android:text="@string/title_current_email"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/current_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="0.3"
                android:gravity="end"
                android:text="@string/current_email"
                android:textColor="@color/dark_grey" />

        </LinearLayout>

        <TextView
            android:id="@+id/title_change_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/new_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_newemail_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:errorEnabled="true">

            <com.example.rasanusa.ui.customview.EditEmailCustom
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/title_confirm_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/title_confirm_kata_sandi" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_confirm_new_pass_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:endIconMode="password_toggle"
            app:errorEnabled="true">

            <com.example.rasanusa.ui.customview.EditPasswordCustom
                android:id="@+id/confirm_new_passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="8dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_update_email"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/change_email"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />

    </LinearLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>